--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <div class="colors">
                 <div class="color"></div>
                 <div class="color"></div>
+                <div class="color"></div>
             </div>
             <div class="sizes">
                 <div class="size">42</div>
